# poly

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  justfile  schema.sql
.github/workflows/: ci.yml
assets/: dashboard.html
docs/: architecture.md  auto-claim-plan.md  dashboard-queries.md  live-trading-setup.md  local-dashboard.md
docs/plans/: 2026-03-07-polymarket-bot-design.md  2026-03-07-polymarket-bot-plan.md  2026-03-09-feature-proposals.md  2026-03-12-fill-rate-design.md  2026-03-12-fill-rate-impl.md  2026-03-12-future-ideas.md  2026-03-13-weather-impl.md  2026-03-13-weather-module-design.md
src/: cli.rs  config.rs  dashboard.rs  flow.rs  lib.rs  main.rs  paths.rs  types.rs
src/actors/: decision.rs  executor.rs  ingest.rs  market_fetcher.rs  mod.rs  signal.rs  telegram.rs  writer.rs
src/db/: mod.rs  queries.rs  schema.rs
src/math/: bayesian.rs  decay.rs  kelly.rs  lmsr.rs  mod.rs
src/polymarket/: auth.rs  client.rs  live_trader.rs  mod.rs  signing.rs  types.rs
src/weather/: fetcher.rs  forecast.rs  mod.rs  signal.rs  types.rs
tests/: db_tests.rs  decision_tests.rs  executor_tests.rs  flow_tests.rs  ingest_tests.rs  integration_test.rs  math_tests.rs  signal_tests.rs  weather_db_tests.rs  weather_fetcher_tests.rs  weather_forecast_tests.rs  weather_integration_test.rs  weather_signal_tests.rs  weather_types_tests.rs  writer_tests.rs
