[package]
name = "polymarket-bot"
version = "0.3.0"
edition = "2021"
default-run = "poly"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

# Polymarket API client (public endpoints)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"

# Polymarket official SDK (authenticated trading)
polymarket-client-sdk = { version = "0.4", features = ["clob"] }
alloy = { version = "1.6", default-features = false, features = ["signer-local", "signers", "contract", "provider-http"] }
rust_decimal = "1.40"
rust_decimal_macros = "1.40"

# Legacy deps still used
hex = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
doc_markdown = "allow"
upper_case_acronyms = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"
struct_field_names = "allow"

[[bin]]
name = "poly"
path = "src/main.rs"
